--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,14 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "a11y": {
+        "useButtonType": "off"
+      },
+      "correctness": {
+        "noUnknownProperty": "warn",
+        "noUnusedVariables": "info"
+      }
     }
   },
   "javascript": {
@@ -29,6 +36,16 @@
       "source": {
         "organizeImports": "on"
       }
+    }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
+  "html": {
+    "formatter": {
+      "enabled": true
     }
   }
 }
