--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "check:write": "biome check --write ."
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.16",
-    "solid-js": "^1.9.9",
-    "tailwindcss": "^4.1.16"
+    "solid-js": "^1.9.9"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.16",
+    "tailwindcss": "^4.1.16",
     "@biomejs/biome": "2.3.2",
     "@types/node": "^24.6.0",
     "daisyui": "^5.3.10",
