--- a/biome.json
+++ b/biome.json
@@ -22,6 +22,9 @@
       "correctness": {
         "noUnknownProperty": "warn",
         "noUnusedVariables": "info"
+      },
+      "complexity": {
+        "noImportantStyles": "info"
       }
     }
   },
