--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwindcss": "^4.1.16",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14",
+    "vite-plugin-circular-dependency": "^0.5.0",
     "vite-plugin-lucide-preprocess": "^1.4.5",
     "vite-plugin-solid": "^2.11.8"
   },
