--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,11 @@
     "noUnusedParameters": false,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "paths": {
+      "#/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
