--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^24.6.0",
     "daisyui": "^5.3.10",
     "express": "^5.1.0",
+    "extract-zip": "^2.0.1",
     "tailwindcss": "^4.1.16",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14",
