--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
+    "package": {
+      "dependsOn": ["^package"]
+    },
     "copyDist": {
       "dependsOn": ["^copyDist"]
     },
