--- a/packages/note/package.json
+++ b/packages/note/package.json
@@ -12,7 +12,7 @@
     "updateNoteType": "npx vite-node ./script/updateNoteType.ts",
     "generateTemplate": "npx vite-node ./script/generateTemplate.ts",
     "apply": "pnpm run build && pnpm run generateTemplate && pnpm run copyDist && pnpm run updateNoteType",
-    "package": "node ./script/package.ts"
+    "package": "npx vite-node ./script/package.ts"
   },
   "dependencies": {
     "solid-js": "^1.9.9"
