--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,9 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**"]
     },
+    "docs#build": {
+      "outputs": [".vitepress/dist/**"]
+    },
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
