--- a/packages/note/package.json
+++ b/packages/note/package.json
@@ -11,8 +11,9 @@
     "copyDist": "node ./script/copyDist.ts",
     "updateNoteType": "npx vite-node ./script/updateNoteType.ts",
     "generateTemplate": "npx vite-node ./script/generateTemplate.ts",
+    "validateVersion": "npx vite-node ./script/validateVersion.ts",
     "apply": "pnpm run build && pnpm run generateTemplate && pnpm run copyDist && pnpm run updateNoteType",
-    "package": "npx vite-node ./script/package.ts"
+    "package": "pnpm run validateVersion && npx vite-node ./script/package.ts"
   },
   "dependencies": {
     "@solidjs/h": "2.0.0-experimental.0",
