--- a/packages/note/package.json
+++ b/packages/note/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "extract-zip": "^2.0.1",
     "tailwindcss": "^4.1.16",
+    "tar": "^7.5.2",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.1.14",
     "vite-node": "^3.2.4",
