--- a/packages/note/package.json
+++ b/packages/note/package.json
@@ -15,6 +15,7 @@
     "package": "npx vite-node ./script/package.ts"
   },
   "dependencies": {
+    "@floating-ui/dom": "^1.7.4",
     "solid-js": "^1.9.9"
   },
   "devDependencies": {
