--- a/packages/note/tsconfig.app.json
+++ b/packages/note/tsconfig.app.json
@@ -30,5 +30,5 @@
       "#/*": ["./src/*"]
     }
   },
-  "include": ["src", "script/ssr.tsx"]
+  "include": ["src", "script/generateSsrTemplate.tsx"]
 }
