refactor: track kiku_db_main

--- a/.gitignore
+++ b/.gitignore
@@ -23,17 +23,24 @@ dist-ssr
 *.sln
 *.sw?
 .circularDependency.json
-.fonts
-.db
 .turbo
 apps/docs/.vitepress/cache
 __pycache__
 packages/addon/meta.json
 .env
-.release
 todo.txt
-.dicts
-.jpdb
-.kanjivg
-.wk
-.jmdict
+
+
+/packages/note/.fonts/*
+/packages/note/.dicts/*
+/packages/note/.release/*
+
+/packages/note/.jmdict/*
+/packages/note/.jpdb/*
+/packages/note/.wk/*
+/packages/note/.kanjivg/*
+/packages/note/.db/*
+!/packages/note/.db/_kiku_db_main.tar
+!/packages/note/.db/_kiku_db_main_manifest.json
+
+
